Updated styles and replaced red with orange

--- a/about-us.html
+++ b/about-us.html
@@ -25,7 +25,7 @@
     padding: 10px 20px;
     border-radius: 20px;
     margin-top: 17px;
-    background: #e92424;
+    background: orange;
     color: white;
     font-weight: 600;
     font-size: 15px;
@@ -35,7 +35,7 @@ marquee.eff {
     color: #fff;
     font-size: 16px;
     font-weight:600;
-    background: rgb(233 36 36);
+    background:orange;
     padding: 5px 0px;
     text-transform:uppercase;
 }
@@ -47,7 +47,7 @@ marquee.eff {
 
 @media only screen and (max-width: 768px) {
     .ww{font-size:24px!important;}
-  .main-header .header-lower .logo {background: #e92424;}
+  .main-header .header-lower .logo {background: orange;}
   .carousel-inner .box-inner{display:none;}
   .default-banner .window-size{min-height:200px!important;height:200px!important;}
   .ww{padding:12px!important;}
@@ -480,7 +480,7 @@ We want to create value for stakeholders by seamlessly delivering Dani Multimedi
                   <a href=""><button>Lal Kuan</button></a>
                   <a href=""><button>Shastri Nagar</button></a>
                   <a href=""><button>sahibabad</button></a>-->
-                    <a href="location.html"><button style="background: none; border: 1px solid #e92424;">Click here for
+                    <a href="location.html"><button style="background: none; border: 1px solid orange;">Click here for
                             more locations</button></a>
 
 
