--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     padding: 10px 20px;
     border-radius: 20px;
     margin-top: 17px;
-    background: #e92424;
+    background: orange;
     color: white;
     font-weight: 600;
     font-size: 15px;
@@ -34,7 +34,7 @@ marquee.eff {
     color: #fff;
     font-size: 16px;
     font-weight:600;
-    background: rgb(233 36 36);
+    background: rgb(255, 168, 6);
     padding: 5px 0px;
     text-transform:uppercase;
 }
