--- a/location.html
+++ b/location.html
@@ -24,7 +24,7 @@
     padding: 10px 20px;
     border-radius: 20px;
     margin-top: 17px;
-    background: #e92424;
+    background: orange;
     color: white;
     font-weight: 600;
     font-size: 15px;
@@ -34,7 +34,7 @@ marquee.eff {
     color: #fff;
     font-size: 16px;
     font-weight:600;
-    background: rgb(233 36 36);
+    background:orange;
     padding: 5px 0px;
     text-transform:uppercase;
 }
@@ -46,7 +46,7 @@ marquee.eff {
 
 @media only screen and (max-width: 768px) {
     .ww{font-size:24px!important;}
-  .main-header .header-lower .logo {background: #e92424;}
+  .main-header .header-lower .logo {background: orange;}
   .carousel-inner .box-inner{display:none;}
   .default-banner .window-size{min-height:200px!important;height:200px!important;}
   .ww{padding:12px!important;}
@@ -167,7 +167,7 @@ marquee.eff {
 .main-loc h3 {
     font-size: 22px;
     font-weight: 600;
-    color: #e92424;
+    color: orange;
 }
 .cont-loc {
     width: 100%;
@@ -177,7 +177,7 @@ marquee.eff {
 }
 .loc-box {
     width: 24%;
-    background: #e92424;
+    background: orange;
     padding: 20px 0px;
 }
 .loc-box ul li {
@@ -195,7 +195,7 @@ marquee.eff {
 @media only screen and (max-width: 768px) {
   .loc-box {
     width: 100%!important;
-    background: #e92424;
+    background: orange;
     margin-bottom:20px;
     padding: 20px 0px;
 }
@@ -477,7 +477,7 @@ marquee.eff {
                   <a href=""><button>Lal Kuan</button></a>
                   <a href=""><button>Shastri Nagar</button></a>
                   <a href=""><button>sahibabad</button></a>-->
-                    <a href="location.html"><button style="background: none; border: 1px solid #e92424;">Click here for
+                    <a href="location.html"><button style="background: none; border: 1px solid orange;">Click here for
                             more locations</button></a>
 
 
