--- a/palki.html
+++ b/palki.html
@@ -28,7 +28,7 @@
             padding: 10px 20px;
             border-radius: 20px;
             margin-top: 17px;
-            background: #e92424;
+            background: orange;
             color: white;
             font-weight: 600;
             font-size: 15px;
@@ -39,7 +39,7 @@
             color: #fff;
             font-size: 16px;
             font-weight: 600;
-            background: rgb(233 36 36);
+            background:orange;
             padding: 5px 0px;
             text-transform: uppercase;
         }
@@ -59,7 +59,7 @@
             }
 
             .main-header .header-lower .logo {
-                background: #e92424;
+                background: orange;
             }
 
             .carousel-inner .box-inner {
@@ -455,7 +455,7 @@
                   <a href=""><button>Lal Kuan</button></a>
                   <a href=""><button>Shastri Nagar</button></a>
                   <a href=""><button>sahibabad</button></a>-->
-                    <a href="location.html"><button style="background: none; border: 1px solid #e92424;">Click here for
+                    <a href="location.html"><button style="background: none; border: 1px solid orange;">Click here for
                             more locations</button></a>
 
 
