Updated styles and replaced red with orange

--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-<title>RAJA Band TM SINCE 1935</title>
+<title>Raj Band TM SINCE 1935</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,7 +68,7 @@ marquee.eff {
     <!-- Main Header -->
     <header class="main-header" id="main-header">
     	<!-- Header Top -->
-    	<marquee behavior="scroll" direction="left" class="eff">rajbandtm@gmail.com, RAJA Band TM SINCE 1935,
+    	<marquee behavior="scroll" direction="left" class="eff">rajbandtm@gmail.com, Raj Band TM SINCE 1935,
                 2 Flate, Shop No, 1076, Sector 3, Vasundhara, ghaziabad. Uttar Pradesh, HUMARA KAAM HUMARI PEHCHAN</marquee>
     	<div class="header-top">
         	<div class="auto-container clearfix">
@@ -192,21 +192,21 @@ marquee.eff {
                     	<div class="col-md-7  col-sm-7 col-xs-12 column">
                         	<h2 class="main-title">OUR PROFILE</h2>
                            
-							<p>RAJA Band TM SINCE 1935 is a professionally managed band, which is winning Accolades in the industry. One of the finest Ghoriwala in delhi & ghoriwala in delhi ncr but also well known Ghoriwala all over the country. We have a sterling reputed approach towards conceptualizing and executing small, medium and high-end enterprise solutions to our prestigious clients.</p>
+							<p>Raj Band TM SINCE 1935 is a professionally managed band, which is winning Accolades in the industry. One of the finest Ghoriwala in delhi & ghoriwala in delhi ncr but also well known Ghoriwala all over the country. We have a sterling reputed approach towards conceptualizing and executing small, medium and high-end enterprise solutions to our prestigious clients.</p>
                             
 <h3>WHAT WE DO?</h3>
-<p>RAJA Band TM SINCE 1935 are well renowed for Ghori, Mashal, palki, chattar zariwala, Baggi Light Wali, baggi with flower, wedding doli, wedding shehnai, petromax lights, wedding fireworks, jhoomer lights, tahsa, punjabi dhol, flower decorators, wedding band.
+<p>Raj Band TM SINCE 1935 are well renowed for Ghori, Mashal, palki, chattar zariwala, Baggi Light Wali, baggi with flower, wedding doli, wedding shehnai, petromax lights, wedding fireworks, jhoomer lights, tahsa, punjabi dhol, flower decorators, wedding band.
 <br>
 <br>
 We as bandwala provides stupenduos services to our clients because of what we are well renowned bandwala in delhi & bandwala in delhi ncr. Over the years our experienced team of professionals has set a benchmark for itself of unbridled creativity in managing sundry events and earned the trust of a diverse range of clients while establishing a national reputation for innovative, influential and effective work. Our expertise and years of experience combined with the enthusiasm of our ever eager staff to serve you, will assure you of the service second to none.
 <br>
 <br>
-We have the arrrangement for these services :- Chattar Zariwala | Bhangra Party | Shehnai | Baggi with Flower | Baggi Light Wali(Rath) | Well Flower Decorated Palki for Entry | Well Flower Decorated Doli for Bidai | Jhoomer Lights | Petromax Lights | Flower's Chatter | Elephant | Camel | Fireworks | Rajasthani Folk Dance .
+We have the arrrangement for these services :- Chattar Zariwala | Bhangra Party | Shehnai | Baggi with Flower | Baggi Light Wali(Rath) | Well Flower Decorated Palki for Entry | Well Flower Decorated Doli for Bidai | Jhoomer Lights | Petromax Lights | Flower's Chatter | Elephant | Camel | Fireworks | Rajsthani Folk Dance .
 We want to create value for stakeholders by seamlessly delivering Dani Multimedia LED Products at a competitive price that meets customer’s needs matched with our capability to earnestly manufacture or procure and deliver the same.
 </p>
 
 <h3>STRENGTH</h3>
-<p>RAJA Band TM SINCE 1935 is best known for its exuberant and impressive wedding band services for most of the occasions and celebrations. We have distinguished uniforms and turbans that look stylish when worn by our Band men, thus creating a class in Baraat. Besides the uniforms, we offer harmonious Music, decorated Ghori, Baggi & Palki, astounding Lighting and illuminating Fireworks.
+<p>Raj Band TM SINCE 1935 is best known for its exuberant and impressive wedding band services for most of the occasions and celebrations. We have distinguished uniforms and turbans that look stylish when worn by our Band men, thus creating a class in Baraat. Besides the uniforms, we offer harmonious Music, decorated Ghori, Baggi & Palki, astounding Lighting and illuminating Fireworks.
 </p>
 
 <h3>WHY US?</h3>
@@ -425,7 +425,7 @@ We want to create value for stakeholders by seamlessly delivering Dani Multimedi
                                             <i class="fa fa-map-marker"></i>
                                             <a href="https://maps.app.goo.gl/FRRVKoZTAcAbRGDeA" target="_blank"
                                                 style="color: inherit; text-decoration: none;">
-                                                 RAJA Band TM SINCE 1935, Shop No 1076, Sector 3, Vasundhara, Ghaziabad, Uttar Pradesh
+                                                 Raj Band TM SINCE 1935, Shop No 1076, Sector 3, Vasundhara, Ghaziabad, Uttar Pradesh
                                             </a>
                                         </li>
 
