--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>RAJA Band TM SINCE 1935</title>
+    <title>RAJ Band TM SINCE 1935</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -59,7 +59,7 @@
             }
 
             .main-header .header-lower .logo {
-                background: #e92424;
+                background: orange;
             }
 
             .carousel-inner .box-inner {
@@ -205,7 +205,7 @@
                     <div class="auto-container">
                         <div class="box-inner">
                             <div class="big-title ">
-                                <h2>Rajband</h2>
+                                <h2> Welcome to Rajband</h2>
                             </div>
                             <h4 class="text-white font-24"></h4>
 
@@ -220,7 +220,7 @@
                     <div class="auto-container">
                         <div class="box-inner">
                             <div class="big-title bg-grey">
-                                <h2>Rajband</h2>
+                                <h2> Welcome to Rajband</h2>
                             </div>
                             <h4 class="text-white font-24"></h4>
 
@@ -234,7 +234,7 @@
                     <div class="auto-container">
                         <div class="box-inner">
                             <div class="big-title">
-                                <h2>Rajband</h2>
+                                <h2>Welcome to Rajband</h2>
                             </div>
                             <h4 class="text-white font-24"></h4>
 
@@ -350,7 +350,7 @@
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
                         <h1 class="font-sacramento text-thm ww">Welcome to rajband</h1>
-                        <h3 class="blink-soft" style="font-size:26px;color:#000;">(Delhi, Noida, Ghaziabad, Jaipur,
+                        <h3 class="blink-soft" style="font-size:26px;color:#000;">(Delhi, Noida, Ghaziabad,
                             Gurugram)</h3>
                         <div class="mb-30 mt-15"> <img class="img-responsive" src="images/title-bottom.png" alt="">
                         </div>
@@ -993,7 +993,7 @@
         <div class="container">
             <div class="sec-title style-two text-center">
                 <h2 class="text-white">Photo Gallery</h2>
-                <h3 class="text-white">RAJA Band TM SINCE 1935</h3>
+                <h3 class="text-white">raj Band TM SINCE 1935</h3>
                 <div class="line"></div>
             </div>
 
@@ -1521,7 +1521,7 @@
                                         <i class="fa fa-map-marker"></i>
                                         <a href="https://maps.app.goo.gl/FRRVKoZTAcAbRGDeA" target="_blank"
                                             style="color: inherit; text-decoration: none;">
-                                            RAJA Band TM SINCE 1935, Shop No 1076, Sector 3, Vasundhara, Ghaziabad,
+                                            Raj Band TM SINCE 1935, Shop No 1076, Sector 3, Vasundhara, Ghaziabad,
                                             Uttar Pradesh
                                         </a>
                                     </li>
@@ -1578,7 +1578,7 @@
                   <a href=""><button>Lal Kuan</button></a>
                   <a href=""><button>Shastri Nagar</button></a>
                   <a href=""><button>sahibabad</button></a>-->
-                <a href="location.html"><button style="background: none; border: 1px solid #e92424;">Click here for
+                <a href="location.html"><button style="background: none; border: 1px solid orange;">Click here for
                         more locations</button></a>
 
 
