--- a/location.html
+++ b/location.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-<title>RAJA Band TM SINCE 1935</title>
+<title>Raj Band TM SINCE 1935</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,7 +67,7 @@ marquee.eff {
     <!-- Main Header -->
     <header class="main-header" id="main-header">
     	<!-- Header Top -->
-    	<marquee behavior="scroll" direction="left" class="eff">RAJA Band TM SINCE 1935, 2 Flate, Shop No, 1076, Sector 3, Vasundhara, ghaziabad. Uttar Pradesh,</marquee>
+    	<marquee behavior="scroll" direction="left" class="eff">Raj Band TM SINCE 1935, 2 Flate, Shop No, 1076, Sector 3, Vasundhara, ghaziabad. Uttar Pradesh,</marquee>
     	<div class="header-top">
         	<div class="auto-container clearfix">
             	<!-- Top Left -->
@@ -246,7 +246,7 @@ marquee.eff {
                         <li>Ajmeri Gate</li>
                         <li>Karol Bagh</li>
                         <li>Indraprastha Extension</li>
-                        <li>Raja Garden</li>
+                        <li>Raj Garden</li>
                         <li>Civil Lines</li>
                         <li>Vikas Puri </li>
                         <li>Panchsheel Park </li>
@@ -407,7 +407,7 @@ marquee.eff {
                                             <i class="fa fa-map-marker"></i>
                                             <a href="https://maps.app.goo.gl/FRRVKoZTAcAbRGDeA" target="_blank"
                                                 style="color: inherit; text-decoration: none;">
-                                                 RAJA Band TM SINCE 1935, Shop No 1076, Sector 3, Vasundhara, Ghaziabad, Uttar Pradesh
+                                                 Raj Band TM SINCE 1935, Shop No 1076, Sector 3, Vasundhara, Ghaziabad, Uttar Pradesh
                                             </a>
                                         </li>
 
