--- a/fireworks.html
+++ b/fireworks.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>RAJA Band TM SINCE 1935</title>
+    <title>Raj Band TM SINCE 1935</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -108,7 +108,7 @@
         <!-- Main Header -->
         <header class="main-header" id="main-header">
             <!-- Header Top -->
-            <marquee behavior="scroll" direction="left" class="eff">rajbandtm@gmail.com, RAJA Band TM SINCE 1935,
+            <marquee behavior="scroll" direction="left" class="eff">rajbandtm@gmail.com, Raj Band TM SINCE 1935,
                 2 Flate, Shop No, 1076, Sector 3, Vasundhara, ghaziabad. Uttar Pradesh, HUMARA KAAM HUMARI PEHCHAN
             </marquee>
             <div class="header-top">
@@ -246,8 +246,8 @@
         <section id="gallery-section" class="gallery-section parallax">
             <div class="container">
                 <div class="sec-title style-two">
-                    <h3> RAJA Band TM SINCE 1935</h3>
-                    <h2>DJ ON WHEELS SERVICES</h2>
+                    <h3> Raj Band TM SINCE 1935</h3>
+                    <h2>Fireworks Services </h2>
                     <div class="line"></div>
                 </div>
                 <div class="row clearfix">
@@ -278,6 +278,15 @@
                         <figure class="image">
                             <img class="img-responsive" src="assets/Destination weddings are so much more intimate and….jpg" alt="">
                             <div class="overlay-box"><a href="assets/Destination weddings are so much more intimate and….jpg" class="link lightbox-image"
+                                    title="Gallery Photos"><span class="txt font-30"><i
+                                            class="fa fa-camera"></i></span></a></div>
+                        </figure>
+                    </div>
+                     <div class="col-md-3 col-sm-4 col-xs-12 column wow fadeIn" data-wow-delay="0ms"
+                        data-wow-duration="1500ms">
+                        <figure class="image">
+                            <img class="img-responsive" src="assets/pexels-sampark-films-samparkfilms-com-1300296201-32212926.jpg" alt="">
+                            <div class="overlay-box"><a href="assets/pexels-sampark-films-samparkfilms-com-1300296201-32212926.jpg" class="link lightbox-image"
                                     title="Gallery Photos"><span class="txt font-30"><i
                                             class="fa fa-camera"></i></span></a></div>
                         </figure>
@@ -381,7 +390,7 @@
                                             <i class="fa fa-map-marker"></i>
                                             <a href="https://maps.app.goo.gl/FRRVKoZTAcAbRGDeA" target="_blank"
                                                 style="color: inherit; text-decoration: none;">
-                                                 RAJA Band TM SINCE 1935, Shop No 1076, Sector 3, Vasundhara, Ghaziabad, Uttar Pradesh
+                                                 Raj Band TM SINCE 1935, Shop No 1076, Sector 3, Vasundhara, Ghaziabad, Uttar Pradesh
                                             </a>
                                         </li>
 
