--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-<title>RAJA Band TM SINCE 1935</title>
+<title>Raj Band TM SINCE 1935</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -64,7 +64,7 @@ marquee.eff {
    
     <header class="main-header" id="main-header">
     	<!-- Header Top -->
-    	<marquee behavior="scroll" direction="left" class="eff">rajbandtm@gmail.com, RAJA Band TM SINCE 1935,
+    	<marquee behavior="scroll" direction="left" class="eff">rajbandtm@gmail.com, Raj Band TM SINCE 1935,
                 2 Flate, Shop No, 1076, Sector 3, Vasundhara, ghaziabad. Uttar Pradesh, HUMARA KAAM HUMARI PEHCHAN</marquee>
     	<div class="header-top">
         	<div class="auto-container clearfix">
@@ -177,7 +177,7 @@ marquee.eff {
    <section id="gallery-section" class="gallery-section parallax">
     <div class="container">
         <div class="sec-title style-two">
-            <h3>RAJA Band TM SINCE 1935</h3>
+            <h3>Raj Band TM SINCE 1935</h3>
             <h2>PHOTO GALLERY</h2>
             <div class="line"></div>
         </div>
@@ -438,7 +438,7 @@ marquee.eff {
                                             <i class="fa fa-map-marker"></i>
                                             <a href="https://maps.app.goo.gl/FRRVKoZTAcAbRGDeA" target="_blank"
                                                 style="color: inherit; text-decoration: none;">
-                                                 RAJA Band TM SINCE 1935, Shop No 1076, Sector 3, Vasundhara, Ghaziabad, Uttar Pradesh
+                                                 Raj Band TM SINCE 1935, Shop No 1076, Sector 3, Vasundhara, Ghaziabad, Uttar Pradesh
                                             </a>
                                         </li>
 
