--- a/service.html
+++ b/service.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-<title>RAJA Band TM SINCE 1935</title>
+<title>Raj Band TM SINCE 1935</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
