--- a/about-us.html
+++ b/about-us.html
@@ -103,9 +103,9 @@ marquee.eff {
         	<div class="auto-container clearfix">
                 <!--Outer Box-->
                 <div class="outer-box">
-                    <!-- Logo -->
+                    <!-- logo2 -->
                     <div class="logo">
-                        <a href="index.html"><img class="img-responsive" src="assets/logo.jpeg" style="width:100px;"></a>
+                        <a href="index.html"><img class="img-responsive" src="assets/logo2.jpeg" style="width:100px;"></a>
                     </div>
                     <!-- Main Menu -->
                     <nav class="main-menu">
