--- a/gallery.html
+++ b/gallery.html
@@ -102,7 +102,7 @@ marquee.eff {
                 <div class="outer-box">
                     <!-- Logo -->
                     <div class="logo">
-                        <a href="index.html"><img class="img-responsive" src="assets/logo.jpeg" style="width:100px;"></a>
+                        <a href="index.html"><img class="img-responsive" src="assets/logo2.jpeg" style="width:100px;"></a>
                     </div>
                     <!-- Main Menu -->
                     <nav class="main-menu">
