--- a/fireworks.html
+++ b/fireworks.html
@@ -151,7 +151,7 @@
                     <div class="outer-box">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img class="img-responsive" src="assets/logo.jpeg"
+                            <a href="index.html"><img class="img-responsive" src="assets/logo2.jpeg"
                                     style="width:100px;"></a>
                         </div>
                         <!-- Main Menu -->
