--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     </div>
                 </div>
                 <!--Slide Item-->
-                <div class="item window-size" data-bg-img="assets/21.jpeg">
+                <div class="item window-size" data-bg-img="assets/21.jpg">
                     <div class="auto-container">
                         <div class="box-inner">
                             <div class="big-title">
